; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ocfs2/cluster/extr_tcp.c_o2net_listen_data_ready.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ocfs2/cluster/extr_tcp.c_o2net_listen_data_ready.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { {}*, {}*, i64, i32 }

@TCP_LISTEN = common dso_local global i64 0, align 8
@ML_TCP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"bytes: %d\0A\00", align 1
@o2net_wq = common dso_local global i32 0, align 4
@o2net_listen_work = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sock*, i32)* @o2net_listen_data_ready to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @o2net_listen_data_ready(%struct.sock* %0, i32 %1) #0 {
  %3 = alloca %struct.sock*, align 8
  %4 = alloca i32, align 4
  %5 = alloca void (%struct.sock*, i32)*, align 8
  store %struct.sock* %0, %struct.sock** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.sock*, %struct.sock** %3, align 8
  %7 = getelementptr inbounds %struct.sock, %struct.sock* %6, i32 0, i32 3
  %8 = call i32 @read_lock(i32* %7)
  %9 = load %struct.sock*, %struct.sock** %3, align 8
  %10 = getelementptr inbounds %struct.sock, %struct.sock* %9, i32 0, i32 0
  %11 = bitcast {}** %10 to void (%struct.sock*, i32)**
  %12 = load void (%struct.sock*, i32)*, void (%struct.sock*, i32)** %11, align 8
  store void (%struct.sock*, i32)* %12, void (%struct.sock*, i32)** %5, align 8
  %13 = load void (%struct.sock*, i32)*, void (%struct.sock*, i32)** %5, align 8
  %14 = icmp eq void (%struct.sock*, i32)* %13, null
  br i1 %14, label %15, label %20

15:                                               ; preds = %2
  %16 = load %struct.sock*, %struct.sock** %3, align 8
  %17 = getelementptr inbounds %struct.sock, %struct.sock* %16, i32 0, i32 1
  %18 = bitcast {}** %17 to void (%struct.sock*, i32)**
  %19 = load void (%struct.sock*, i32)*, void (%struct.sock*, i32)** %18, align 8
  store void (%struct.sock*, i32)* %19, void (%struct.sock*, i32)** %5, align 8
  br label %33

20:                                               ; preds = %2
  %21 = load %struct.sock*, %struct.sock** %3, align 8
  %22 = getelementptr inbounds %struct.sock, %struct.sock* %21, i32 0, i32 2
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @TCP_LISTEN, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %32

26:                                               ; preds = %20
  %27 = load i32, i32* @ML_TCP, align 4
  %28 = load i32, i32* %4, align 4
  %29 = call i32 @mlog(i32 %27, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %28)
  %30 = load i32, i32* @o2net_wq, align 4
  %31 = call i32 @queue_work(i32 %30, i32* @o2net_listen_work)
  br label %32

32:                                               ; preds = %26, %20
  br label %33

33:                                               ; preds = %32, %15
  %34 = load %struct.sock*, %struct.sock** %3, align 8
  %35 = getelementptr inbounds %struct.sock, %struct.sock* %34, i32 0, i32 3
  %36 = call i32 @read_unlock(i32* %35)
  %37 = load void (%struct.sock*, i32)*, void (%struct.sock*, i32)** %5, align 8
  %38 = load %struct.sock*, %struct.sock** %3, align 8
  %39 = load i32, i32* %4, align 4
  call void %37(%struct.sock* %38, i32 %39)
  ret void
}

declare dso_local i32 @read_lock(i32*) #1

declare dso_local i32 @mlog(i32, i8*, i32) #1

declare dso_local i32 @queue_work(i32, i32*) #1

declare dso_local i32 @read_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
